# dsa-recommendation

./: .gitignore  conftest.py  main.py  pyproject.toml  requirements.txt
controllers/: mastery_controller.py  recommendation_controller.py  submission_controller.py
data/: _build_sample.py  problem_nodes_normalized.json
data/normalized_graph_files/: topic_topic_edges_normalized.json
database/postgres/: db.py
database/qdrant/: test_qdrant.py
pipeline/embeddings/: embedder.py
pipeline/graphs/: build_graph.py  config.py  ingest_rgcn_to_qdrant.py  rgcn_model.py  rgcn_schema.py  run_rgcn_pipeline.py  sources.py  test_rgcn_embeddings.py  train_rgcn.py
pipeline/graphs/rgcn_artifacts/: concept_index.json  rgcn_problem_embeddings.npy
pipeline/ingestion/: fetch_commands.py  ingest.py  run_pipeline.py  schema.py  tag_inference.py  validator.py
pipeline/recommender/: bkt.py  hlr.py  ranking.py
question-graph/data/: problem_nodes.json  problem_topic_edges.json  topic_nodes.json  topic_topic_edges.json
question-graph/src/: graph_builder.py
question-graph/tests/: test_graph_builder.py
routes/: api.py
utils/: code_analyzer.py
