[project]
name = "dsa-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.2",
    "networkx>=3.0",
    "uvicorn>=0.49.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]
