[project]
name = "dsa-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0"
]
